feat: Actions for Category entity

--- a/BookStoreAPI/appsettings.json
+++ b/BookStoreAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.\\SQLEXPRESS;Uid=sa;Pwd=;Database="
+    "Default": "Server=.\\SQLEXPRESS;Uid=sa;Pwd=sa;Database=Booktopia"
   }
 }
