--- a/BusinessObject/appsettings.json
+++ b/BusinessObject/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=.\\SQLEXPRESS;Uid=sa;Pwd=;Database="
+    "Default": "Server=.\\SQLEXPRESS;Uid=sa;Pwd=sa;Database=Booktopia"
   }
 }
