--- a/BookStoreAPI/Properties/launchSettings.json
+++ b/BookStoreAPI/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7105;http://localhost:5117",
+      "applicationUrl": "http://localhost:7105",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
